# smartsplit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  review-ce commit.md  smartsplit.example.json
.claude/: settings.json
.claude/commands/: add-provider.md  audit.md  test.md
.claude/skills/: add-provider.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  provider-watch.yml  publish.yml
benchmarks/: README.md  bench_synthesis.py  dataset.json  run_benchmark.py
examples/: .aider.conf.yml  .continuerc.json  opencode.json
scripts/: check_safe_tools.py  generate_i18n.py  provider_watch.py  report_has_actions.py
smartsplit/: __init__.py  __main__.py  anticipation.py  cli.py  config.py  detector.py  enrichment.py  exceptions.py  formats.py  i18n_keywords.py  intention_detector.py  intercept.py  json_utils.py  learning.py  mitm_addon.py  models.py  pipeline.py  planner.py  proxy.py  quota.py  router.py  tool_anticipator.py  tool_pattern_learner.py  tool_registry.py
smartsplit/providers/: __init__.py  anthropic.py  anthropic_adapter.py  base.py  cerebras.py  cloudflare.py  deepseek.py  gemini.py  groq.py  huggingface.py  mistral.py  openai.py  openrouter.py  perplexity.py  registry.py  serper.py  tavily.py
smartsplit/proxy/: __init__.py  formats.py  intercept.py  pipeline.py  server.py
smartsplit/routing/: __init__.py  learning.py  quota.py  router.py
smartsplit/tools/: __init__.py  anticipation.py  anticipator.py  intention_detector.py  pattern_learner.py  registry.py
smartsplit/triage/: __init__.py  detector.py  enrichment.py  enrichment_prompts.py  planner.py  research.py  research_prompts.py
tests/: conftest.py  test_anticipation.py  test_base_provider.py  test_cli.py  test_client_shapes.py  test_config.py  test_custom_providers.py  test_detector.py  test_e2e_http.py  test_enrichment.py  test_enrichment_prompts.py  test_formats_extras.py  test_integration.py  test_intention_detector.py  test_intercept.py  test_learning.py  test_mitm_addon.py  test_models.py  test_pipeline.py  test_planner.py  test_providers.py  test_proxy.py  test_proxy_helpers.py  test_quota.py  test_research.py  test_router.py  test_search_providers.py  test_tool_anticipator.py  test_tool_pattern_learner.py  test_tool_registry.py
