[project]
name = "smartsplit"
version = "0.1.0"
description = "Free multi-LLM backend — decompose prompts into subtasks and route to the best free model for each task"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Steinberger"}]
requires-python = ">=3.11"
keywords = ["llm", "router", "openai", "free", "groq", "gemini", "deepseek", "ai", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/dsteinberger/smartsplit"
Repository = "https://github.com/dsteinberger/smartsplit"
Issues = "https://github.com/dsteinberger/smartsplit/issues"
Changelog = "https://github.com/dsteinberger/smartsplit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[project.scripts]
smartsplit = "smartsplit.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smartsplit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
strict_markers = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "SIM110", # use all() — less readable for error patterns
    "SIM117", # nested with — less readable for patched tests
    "TC002",  # move to TYPE_CHECKING — runtime imports needed
    "TC003",  # move to TYPE_CHECKING — runtime imports needed
]

[tool.ruff.lint.isort]
known-first-party = ["smartsplit"]
