[project]
name = "smartsplit"
version = "0.1.0"
description = "Multi-LLM backend — decompose prompts into subtasks and route to the best model for each task"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Steinberger"}]
requires-python = ">=3.11"
keywords = ["llm", "router", "openai", "free", "groq", "gemini", "deepseek", "ai", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.13.3",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.45.0",
    "cryptography>=46.0.7",
]

[project.urls]
Homepage = "https://github.com/dsteinberger/smartsplit"
Repository = "https://github.com/dsteinberger/smartsplit"
Issues = "https://github.com/dsteinberger/smartsplit/issues"
Changelog = "https://github.com/dsteinberger/smartsplit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "deep-translator>=1.11.4",
]

[project.scripts]
smartsplit = "smartsplit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smartsplit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
strict_markers = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "SIM110", # use all() — less readable for error patterns
    "SIM117", # nested with — less readable for patched tests
    "TC002",  # move to TYPE_CHECKING — runtime imports needed
    "TC003",  # move to TYPE_CHECKING — runtime imports needed
]

[tool.ruff.lint.isort]
known-first-party = ["smartsplit"]
